[tool.poetry]
name = "calendar"
version = "0.0.3"
description = "\"\""
authors = ["Kikoring <kyr4624@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
